# Kaspa-Miner

./: .gitignore  Cargo.toml  README.md  config.example.toml  fleet.example.toml  gpu.example.toml  install-macos.sh  install-windows.cmd  install-windows.ps1  start-mining.toml
.github/workflows/: ci.yml  release.yml
docs/: gpu-mining.md  macos-no-warning-release.md  windows-no-warning-release.md
src/: branding.rs  config.rs  fleet.rs  gpu.rs  main.rs  miner.rs  stats.rs  tui.rs
src/algorithm/: kheavyhash.rs  matrix.rs  mod.rs  xoshiro.rs
src/stratum/: client.rs  mod.rs  protocol.rs
