[package]
name = "kaspa-miner"
version = "0.1.0"
edition = "2021"
description = "High-performance Kaspa CPU miner — macOS · Windows · Linux"

[[bin]]
name = "kaspa-miner"
path = "src/main.rs"

[dependencies]
sha3      = "0.10"
blake3    = "1"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui   = "0.29"
crossterm = "0.28"
clap      = { version = "4", features = ["derive"] }
toml      = "0.8"
hex       = "0.4"
anyhow    = "1"
num_cpus  = "1"
chrono    = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
