[package]
name = "kaspa-miner"
version = "0.1.0"
edition = "2021"
description = "KASPilot: Kaspa ASIC fleet controller with Common Stratum CPU dev miner and kHeavyHash benchmark tools"
authors = ["KASPilot Contributors"]
readme = "README.md"
keywords = ["kaspa", "kheavyhash", "asic", "stratum", "miner"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "network-programming"]
repository = "https://github.com/gryszzz/KasPilot"
homepage = "https://github.com/gryszzz/KasPilot"
license = "MIT OR Apache-2.0"

[[bin]]
name = "kaspa-miner"
path = "src/main.rs"

[dependencies]
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui   = "0.29"
crossterm = "0.28"
clap      = { version = "4", features = ["derive"] }
toml      = "0.8"
hex       = "0.4"
anyhow    = "1"
num_cpus  = "1"
chrono    = "0.4"
kaspa-hashes = "0.15"
num-bigint = "0.4"
num-traits = "0.2"
native-tls = "0.2"
tokio-native-tls = "0.3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
debug         = false
incremental   = false
strip         = "symbols"
